Added javax.servlet.jsp.jar that is needed for cascading tests

--- a/qubole-hadoop/build.gradle
+++ b/qubole-hadoop/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
       testRuntime fileTree(dir: "/usr/lib/hadoop", include: "*.jar")
       testRuntime fileTree(dir: "/usr/lib/hadoop/hadoopJars", include: "*.jar")
+      testRuntime fileTree(dir: "./jars", include: "*.jar")
       testRuntime fileTree(dir: "/usr/lib/hadoop/lib", include: "*.jar").exclude("*junit*")
 }
 
